# deprecated-CorTeX-Peripheral

./: .gitmodules  .travis.yml  CMakeLists.txt  INSTALL  INSTALL.md  Makefile.PL  README.md  cortex-spawner  cortex-worker
clib/: cortex_utils.c  cortex_utils.h  cortex_worker.c  idf_score.c  idf_score.h  llamapun_interface.c  llamapun_interface.h
lib/: CMakeLists.txt  cortex_utils.c  cortex_worker.c  cortex_worker.h  idf_score.c  idf_score.h  idf_v0_1.c
lib/CorTeX/: Service.pm
lib/CorTeX/Service/: defmock_spotter_v0_1.pm  lemma_proof_spotter_v0_1.pm  mock_spotter_v0_1.pm  tex_to_html_v0_1.pm  tex_to_tei_xhtml_v0_1.pm  zbl_to_html_v0_1.pm
resources/: stopwords.json
t/: 01_basic.t  020_tex_html.t  021_tei_xhtml.t  02_tei_xhtml.t  031_sample_spotter.t  041_lemma_with_proof.t
t/resources/: alpha-convergent.tex  supernova.html
t/resources/ComSem-train/1311.0043/: 1311.0043.tex  Szpiro_s_small_points_conjecture_for_cyclic_covers.bbl
t/resources/ComSem-train/1311.0043/_cortex_tex_to_html_v0_1/: 1311.0043.html
t/resources/ComSem-train/1311.1412/: 1311.1412.tex
t/resources/ComSem-train/1311.1412/_cortex_tex_to_html_v0_1/: 1311.1412.html
t/resources/ComSem-train/1311.1930/: 1311.1930.tex
t/resources/ComSem-train/1311.1930/_cortex_tex_to_html_v0_1/: 1311.1930.html
t/resources/ComSem-train/1311.1930/_cortex_tex_to_tei_xhtml_v0_1/: 1311.1930.xhtml
t/resources/ComSem-train/1311.2873/: 1311.2873.tex
t/resources/ComSem-train/1311.2873/_cortex_tex_to_html_v0_1/: 1311.2873.html
t/resources/ComSem-train/1311.2873/_cortex_tex_to_tei_xhtml_v0_1/: 1311.2873.xhtml
t/resources/ComSem-train/1311.3561/: 1311.3561.tex
t/resources/ComSem-train/1311.3561/_cortex_tex_to_html_v0_1/: 1311.3561.html
t/resources/ComSem-train/1311.3561/_cortex_tex_to_tei_xhtml_v0_1/: 1311.3561.xhtml
t/resources/ComSem-train/1311.4143/: 1311.4143.tex
t/resources/ComSem-train/1311.4143/_cortex_tex_to_html_v0_1/: 1311.4143.html
t/resources/ComSem-train/1311.4143/_cortex_tex_to_tei_xhtml_v0_1/: 1311.4143.xhtml
t/resources/ComSem-train/1311.4584/: 1311.4584.tex
t/resources/ComSem-train/1311.4584/_cortex_tex_to_html_v0_1/: 1311.4584.html
t/resources/ComSem-train/1311.4584/_cortex_tex_to_tei_xhtml_v0_1/: 1311.4584.xhtml
t/resources/ComSem-train/1311.5332/: 1311.5332.tex  indbip.bbl
t/resources/ComSem-train/1311.5332/_cortex_tex_to_html_v0_1/: 1311.5332.html
t/resources/ComSem-train/1311.5332/_cortex_tex_to_tei_xhtml_v0_1/: 1311.5332.xhtml
t/resources/ComSem-train/1311.5471/: 1311.5471.tex
t/resources/ComSem-train/1311.5471/_cortex_tex_to_html_v0_1/: 1311.5471.html
t/resources/ComSem-train/1311.5471/_cortex_tex_to_tei_xhtml_v0_1/: 1311.5471.xhtml
t/resources/ComSem-train/1311.6767/_cortex_tex_to_html_v0_1/: 1311.6767.html
